--- a/app/views/landing/index.html.erb
+++ b/app/views/landing/index.html.erb
@@ -1,3 +1,9 @@
+
 <%= link_to "Sign In", sign_in_path %>
-  <% params[:code] %>
-<% Faraday.post %>
+<%  %>
+  <%= @insta_user %>
+
+
+<% if @insta_user[:user] != nil %>
+  <%= link_to(image_tag("#{@insta_user[:user][:profile_picture]}"), root_path) %>
+<% end %>
