--- a/app/views/landing/index.html.erb
+++ b/app/views/landing/index.html.erb
@@ -1,5 +1,10 @@
 
-<% unless @user %>
+<% unless current_user %>
   <%= link_to "Sign In", sign_in_path %>
 <% end %>
-<%= @user[:token] %>
+<% @search[:data].each do |photo| %>
+  <%= image_tag(photo[:images][:standard_resolution][:url]) %>
+</br>
+</br>
+</br>
+<% end %>
