search working v1 ready

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -17,18 +17,10 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
-
- .animateblock {
-   padding: 8px 0;
-   color: #fff;
-   opacity: 0;
-   -webkit-transition: all 0.55s linear;
-   -moz-transition: all 0.55s linear;
-   transition: all 0.55s linear;
- }
-
  #dontskip {
-   margin-bottom: 10px;
+   vertical-align: middle;
+   margin-top: 7px;
+   margin-right: 11px;
  }
 
  body {
