--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,9 +18,9 @@
           <span class="icon-bar"></span>
         </button>
         <% if current_user %>
-          <a class="navbar-brand" href="#">
-          <%= image_tag(current_user.prof_pic, size: "36x36", id: "dontskip", class: "img-circle")%>
-          </a>
+
+          <%= link_to(image_tag(current_user.prof_pic, size: "36x36", id: "dontskip", class: "img-circle"), "https://instagram.com/#{current_user.name}/")%>
+
         <% end %>
       </div>
 
@@ -29,17 +29,8 @@
         <ul class="nav navbar-nav">
           <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
           <li><a href="#">Link</a></li>
-          <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
-            <ul class="dropdown-menu" role="menu">
-              <li><a href="#">Action</a></li>
-              <li><a href="#">Another action</a></li>
-              <li><a href="#">Something else here</a></li>
-              <li class="divider"></li>
-              <li><a href="#">Separated link</a></li>
-              <li class="divider"></li>
-              <li><a href="#">One more separated link</a></li>
-            </ul>
+          <li>
+
           </li>
         </ul>
         <div class="navbar-form navbar-left" role="search">
@@ -47,7 +38,12 @@
             <div class="form-group">
               <%= text_field_tag :search %>
             </div>
+            <div class= "form-group">
+              <%= select_tag(:search_type, options_for_select([['Tag', 1],['Location', 2], ['Popular', 3], ['User Feed', 4], ['Liked Feed', 5]]), {class: 'form-control'}) %>
+            </div>
+            
                 <%= submit_tag "Search", class:"btn btn-default"%>
+
           <% end %>
         </div>
         <ul class="nav navbar-nav navbar-right">
