--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,9 +39,9 @@
               <%= text_field_tag :search %>
             </div>
             <div class= "form-group">
-              <%= select_tag(:search_type, options_for_select([['Tag', 1],['Location', 2], ['Popular', 3], ['User Feed', 4], ['Liked Feed', 5]]), {class: 'form-control'}) %>
+              <%= select_tag(:search_type, options_for_select([['Tag', 1],['Location', 2], ['Liked Feed', 5]]), {class: 'form-control'}) %>
             </div>
-            
+
                 <%= submit_tag "Search", class:"btn btn-default"%>
 
           <% end %>
