--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -22,6 +22,16 @@
    margin-top: 7px;
    margin-right: 11px;
  }
+ #insta {
+   margin-left: 10px;
+   margin-top: 7px;
+
+
+ }
+
+ .col-center{
+  margin:0 auto;
+}
 
  body {
    background: #000000;
