--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,11 +27,7 @@
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
-          <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
-          <li><a href="#">Link</a></li>
-          <li>
-
-          </li>
+          <li id="insta"><h4 style="font-family: Georgia, Serif">Insta33</h4></li>
         </ul>
         <div class="navbar-form navbar-left" role="search">
           <%= form_tag root_path do %>
@@ -39,7 +35,7 @@
               <%= text_field_tag :search %>
             </div>
             <div class= "form-group">
-              <%= select_tag(:search_type, options_for_select([['Tag', 1],['Location', 2], ['Liked Feed', 5]]), {class: 'form-control'}) %>
+              <%= select_tag(:search_type, options_for_select([['Tag', 1],['Location', 2]]), {class: 'form-control'}) %>
             </div>
 
                 <%= submit_tag "Search", class:"btn btn-default"%>
@@ -47,9 +43,8 @@
           <% end %>
         </div>
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="#">Link</a></li>
           <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Fun Zone<span class="caret"></span></a>
             <ul class="dropdown-menu" role="menu">
               <li><a href="#">Action</a></li>
               <li><a href="#">Another action</a></li>
