--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -17,21 +17,22 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
- #dontskip {
-   vertical-align: middle;
-   margin-top: 7px;
-   margin-right: 11px;
- }
- #insta {
-   margin-left: 10px;
-   margin-top: 7px;
+#dontskip {
+ vertical-align: middle;
+ margin-top: 7px;
+ margin-right: 11px;
+}
+#insta {
+ margin-left: 10px;
+ margin-top: 7px;
 
 
- }
+}
 
 
 
 .vertical-center {
+  position:absolute;
   min-height: 100%;
   min-height: 100vh;
   display: flex;
@@ -39,6 +40,46 @@
   justify-content: center;
   flex-direction: column;
 }
+
+.slider {
+  position: relative;
+  width: 640px;
+  height: 640px;
+  overflow: hidden;
+  margin: 30px auto;
+}
+
+.banner {
+  position: relative;
+  width: 1280px;
+  height: 800px;
+  overflow: hidden;
+  margin: 30px auto;
+}
+
+
+.banner .signO {
+  position: fixed;
+  margin-bottom: 50%;
+  margin-left: 25%;
+  z-index: 1;
+}
+.banner .instagram-image{
+  width: 100%;
+  display: none;
+  -webkit-filter: blur(5px);
+  -moz-filter: blur(5px);
+  -o-filter: blur(5px);
+  -ms-filter: blur(5px);
+  filter: blur(5px);
+}
+
+.slider .instagram-image {
+  height: 100%;
+  display: none
+}
+
+
 
 
 
