--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -47,8 +47,8 @@
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Fun Zone<span class="caret"></span></a>
             <ul class="dropdown-menu" role="menu">
-              <li> </li>
-              <li><a href="#">Another action</a></li>
+              <li> <%= link_to "Narcissism Feed", "/?"+{search_type:"3"}.to_param, method: :post %></li>
+              <li><%= link_to "Liked Feed", "/?"+{search_type:"4"}.to_param, method: :post %></a></li>
               <li><a href="#">Something else here</a></li>
               <li class="divider"></li>
               <li><a href="#">Separated link</a></li>
